--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -8,9 +8,14 @@ entries:
           Explore our Open Source projects and social technology initiatives. 
           We offer a variety of projects and programs that are designed to make a positive impact on the world. 
           Learn more about our work and get involved.
-      - title: github repo
-        url: https://github.com/riggraz/no-style-please
-      - title: "used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a>"
+      - title: Open source projects
+        entries:
+          - title: teiex.org website
+            url: https://github.com/teiex/teiex.github.io
+          - title: Duty Roster Report (Coming soon)
+      - title: Social technology initiatives
+        entries:
+          - title: Coming soon
 
   - title: all posts
     post_list:
