changing the website title

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: no style, please! # name of the site
+title: Hello, World! We are Teiex.org! # name of the site
 author: Paulo Matheus # name of site's author
 #email: # email of site's author
 url: teiex.org # root address of the site
