changing the "all posts" section name to only "posts"

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -17,7 +17,7 @@ entries:
         entries:
           - title: Coming soon
 
-  - title: all posts
+  - title: posts
     post_list:
       limit: 5
       show_more: true
