Removing the RSS section while it is still not ready.

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -31,7 +31,7 @@ entries:
       show_more_text: See more posts...
       show_more_url: example2-archive.html
 
-  - title: rss
+#  - title: rss
     url: feed.xml
   
   - title: another list
