removing the link that was buggy on the page

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -32,7 +32,7 @@ entries:
       show_more_url: example2-archive.html
 
 #  - title: rss
-    url: feed.xml
+#    url: feed.xml
   
   - title: another list
     entries:
