changing the category name to software development category

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -24,7 +24,7 @@ entries:
       show_more_text: See archive...
       show_more_url: archive.html
 
-  - title: posts by category
+  - title: posts by category - software development
     post_list:
       category: example2
       show_more: true
